2018-03-09 Fixed problem with TrueFalse module and undefined model field.
2018-03-09 Added Page Progress Panel module
2018-03-08 Fixed problem with zooming after page change in when using Navigation Bar and Paragraph.
2018-03-07 Fixed tests for pseudo code console and webpack build script.
2018-03-07 Static list property returns objects not lists. Added pseudo code console.
2018-03-06 Fixed problem with & in text selection
2018-03-06 Fixed problem with scrolling and page look with static header on
2018-03-05 Fixed problems with scaling in Popup
2018-03-05 Better handling of the editor page loading error
2018-03-05 Added Timer addon
2018-03-02 Fixed problem with scaling in Connection addon
2018-03-02 Added property to set ordering items to starting position
2018-03-01 Fixed problem with gap parsing with opening tag character 
2018-03-01 Fixed problem with opening gaps on mobile devices in eKeyboard module
2018-02-28 Fixed problem with restoring state in video addon
2018-02-28 Fixed problem with hover in iOS
2018-02-27 Added localization for alt-text in some modules and layout in eKeyboard
2018-02-27 Renamed Hierarichal Lesson Report property
2018-02-23 Readded works with property in Page Progress.
2018-02-22 Changed when Text has no gaps it does not require escape to deactivate in WCAG navigation
2018-02-21 Added TTS support for Reset button
2018-02-21 Added TTS plays the title of the new page
2018-02-20 Added Page mapping ids translations, Size and ModuleDimensions equals implementations
2018-02-20 Added TTS support for SHow Answers Button
2018-02-15 Added TTS support for the Text's Draggable Gap
2018-02-15 Added TTS support for Check Answers Button 
2018-02-15 Fixed issue with scaling in Figure Drawing on mobile devices
2018-02-14 Fixed issue with reseting module in Catch module
2018-02-13 Fixed issues with Glossary scaling on mobile devices
2018-02-13 Fixed problem with resolving url in inline css