@@ -1,3 +1,4 @@
+2018-02-12 Added minus errors scoring type for modules group
 2018-03-09 Fixed problem with TrueFalse module and undefined model field.
 2018-03-09 Added Page Progress Panel module
 2018-03-08 Fixed problem with zooming after page change in when using Navigation Bar and Paragraph.
